Revise introduction and about me section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <main>
   <section class=" container about-hero">
     <span class="kicker">Hi, I’m Jonathan Snodgrass—</span>
-    <h1 class="m0">Designer–developer blending game worlds & secure systems.</h1>
+    <h1 class="m0">Game designer/Cybersecurity.</h1>
     <p class="subtle mt2">I’m a student focused on simulation/game design and cybersecurity. I like building things that are both immersive and robust—clean level flows, readable UI, and defensible networks.</p>
   </section>
 
@@ -43,7 +43,7 @@
     <div>
       <div class="card">
         <h2>About me</h2>
-        <p class="mt1">Based in Fayetteville, NC, I’ve been tinkering with engines, modeling tools, and Linux boxes for years. In school, I split time between <strong>level design & 3D</strong> and <strong>security fundamentals</strong> like packet analysis and hardening. I value documentation, repeatable workflows, and approachable UX.</p>
+        <p class="mt1">Based in Fayetteville, NC, I’ve been tinkering with engines, modeling tools, and Linux boxes for years. In school, I split my time between <strong>level design & 3D</strong> and <strong>security fundamentals</strong>, including packet analysis and hardening. I value documentation, repeatable workflows, and approachable UX </p>
         <div class="row mt3">
           <span class="badge-pill">🎮 Unreal / Unity</span>
           <span class="badge-pill">🔒 Wireshark / Linux</span>
