Update about section and recent activities

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div>
       <div class="card">
         <h2>About me</h2>
-        <p class="mt1">Based in Fayetteville, NC, I’ve been tinkering with engines, modeling tools, and Linux boxes for years. In school, I split my time between <strong>level design & 3D</strong> and <strong>security fundamentals</strong>, including packet analysis and hardening. I value documentation, repeatable workflows, and approachable UX </p>
+        <p class="mt1">Based in Fayetteville, NC, I’ve been tinkering with game engines, modeling tools, and Linux boxes for years. In school, I split my time between <strong>level design & 3D</strong> and <strong>security fundamentals</strong>, including packet analysis and hardening. I value documentation, repeatable workflows, and approachable UX </p>
         <div class="row mt3">
           <span class="badge-pill">🎮 Unreal / Unity</span>
           <span class="badge-pill">🔒 Wireshark / Linux</span>
@@ -78,7 +78,7 @@
           </div>
           <div>
             <div class="fact"><span class="dot"></span>Blender / Modeling</div>
-            <div class="progress mt1"><span style="width:75%"></span></div>
+            <div class="progress mt1"><span style="width:25%"></span></div>
           </div>
           <div>
             <div class="fact"><span class="dot"></span>HTML / CSS / UI</div>
@@ -86,7 +86,7 @@
           </div>
           <div>
             <div class="fact"><span class="dot"></span>Python / Scripting</div>
-            <div class="progress mt1"><span style="width:70%"></span></div>
+            <div class="progress mt1"><span style="width:50%"></span></div>
           </div>
           <div>
             <div class="fact"><span class="dot"></span>Linux / Ops</div>
@@ -110,15 +110,15 @@
       <div class="card mt3">
         <h3>Recent</h3>
         <ul class="mt2">
-          <li>Refined HTTP/HTTPS lab runbook and filter cookbook.</li>
-          <li>Iterated on blockout—improved pacing and lighting calls.</li>
-          <li>Added JSON-driven project system to this site.</li>
+          <li>Test</li>
+          <li>Test</li>
+          <li>Test</li>
         </ul>
       </div>
     </aside>
   </section>
 
-  <section class="container section">
+  <section class=" container section">
     <h2>Featured work</h2>
     <p class="subtle">Test Test</p>
     <div class="grid grid-3 mt3">
