Fix typos and update progress percentages

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </style>
 </head><body>
 <header class="site-header"><div class="container nav">
-  <a class="brand" href="./"><div class="logo"></div><strong class="name">Jonathan Wayne SNodgrass</strong></a>
+  <a class="brand" href="./"><div class="logo"></div><strong class="name">Jonathan Wayne Snodgrass</strong></a>
   <nav class="row">
     <button class="nav-toggle" aria-label="Toggle navigation" onclick="toggleNav()">☰</button>
     <div class="nav-links">
@@ -77,8 +77,8 @@
             <div class="progress mt1"><span style="width:80%"></span></div>
           </div>
           <div>
-            <div class="fact"><span class="dot"></span>Blender / Modeling</div>
-            <div class="progress mt1"><span style="width:25%"></span></div>
+            <div class="fact"><span class="dot"></span>Modeling</div>
+            <div class="progress mt1"><span style="width:75%"></span></div>
           </div>
           <div>
             <div class="fact"><span class="dot"></span>HTML / CSS / UI</div>
@@ -123,7 +123,7 @@
     <p class="subtle">Test Test</p>
     <div class="grid grid-3 mt3">
       <article class="card">
-        <h3>Test./h3>
+        <h3>Test.</h3>
         <p class="subtle">TEST</p>
         <div class="row mt2">
           <a class="button" href="./projects/http-enum.html">View details</a>
