--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@
     </div>
 
     <aside>
-      <div class="portrait card" aria-label="Portrait placeholder">JW</div>
+      <div class="portrait card" style="padding:0; overflow:hidden;">
+        <img src="assets/img/me.jpg" alt="Portrait of Jonathan Wayne" style="width:100%; height:100%; object-fit:cover; border-radius:1rem;">
+          </div>
       <div class="card mt3">
         <h3>Quick facts</h3>
         <div class="kv mt2">
