--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
     <aside>
       <div class="portrait card" style="padding:0; overflow:hidden;">
-        <img src="assets/img/me.jpeg" alt="Portrait of Jonathan Wayne" style="width:100%; height:100%; object-fit:cover; border-radius:1rem;">
+        <img src="assets/img/me.jpeg" alt="Portrait of Jonathan Wayne Snodgrass" style="width:100%; height:100%; object-fit:cover; border-radius:1rem;">
           </div>
       <div class="card mt3">
         <h3>Quick facts</h3>
