--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
 <meta charset="UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>About — Jonathan Wayne Snodgrass</title>
-<link rel="stylesheet" href="assets/styles.css?v=7"/>
+<link rel="stylesheet" href="./assets/styles.css?v=7">
 <script>function toggleNav(){document.querySelector('.nav-links').classList.toggle('open')}</script>
 <style>
 /* about-specific helpers */
