--- a/Resume.html
+++ b/Resume.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html><html lang="en"><head>
-<title>Resume — Jonathan Wayne</title><meta charset="UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/><link rel="stylesheet" href="assets/styles.css?v=5"/>
+<title>Resume — Jonathan Wayne Snodgrass</title><meta charset="UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/><link rel="stylesheet" href="assets/styles.css?v=5"/>
 </head><body>
 
 <header class="site-header"><div class="container nav">
-  <a class="brand" href="./"><div class="logo"></div><strong class="name">Jonathan Wayne</strong></a>
+  <a class="brand" href="./"><div class="logo"></div><strong class="name">Jonathan Wayne Snodgrass</strong></a>
   <nav class="row">
     <button class="nav-toggle" aria-label="Toggle navigation" onclick="document.querySelector('.nav-links').classList.toggle('open')">☰</button>
     <div class="nav-links">
