Update title and brand name in Contact.html

--- a/Contact.html
+++ b/Contact.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html><html lang="en"><head>
 <meta charset="UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>Contact — Jonathan Wayne</title>
+<title>Contact — Jonathan Wayne Snodgrass</title>
 <link rel="stylesheet" href="assets/styles.css?v=6"/>
 <script>function toggleNav(){document.querySelector('.nav-links').classList.toggle('open')}</script>
 </head><body>
 <header class="site-header"><div class="container nav">
-  <a class="brand" href="./"><div class="logo"></div><strong class="name">Jonathan Wayne</strong></a>
+  <a class="brand" href="./"><div class="logo"></div><strong class="name">Jonathan Wayne Snodgrass</strong></a>
   <nav class="row">
     <button class="nav-toggle" aria-label="Toggle navigation" onclick="toggleNav()">☰</button>
     <div class="nav-links">
