--- a/Projects.html
+++ b/Projects.html
@@ -9,7 +9,7 @@
   <nav class="row">
     <button class="nav-toggle" aria-label="Toggle navigation" onclick="document.querySelector('.nav-links').classList.toggle('open')">☰</button>
     <div class="nav-links">
-      <a href="./" >Home</a>
+      <a href="./" >About</a>
       <a href="./Projects.html" class="active">Projects</a>
       <a href="./Education.html" >Education</a>
       <a href="./Contact.html" >Contact</a>
