--- a/Education.html
+++ b/Education.html
@@ -9,7 +9,7 @@
   <nav class="row">
     <button class="nav-toggle" aria-label="Toggle navigation" onclick="toggleNav()">☰</button>
     <div class="nav-links">
-      <a href="./">Home</a>
+      <a href="./">About</a>
       <a href="./Projects.html">Projects</a>
       <a class="active" href="./Education.html">Education</a>
       <a href="./Contact.html">Contact</a>
